Fixing small layout issues in the Movie Pages

--- a/src/pages/MovieInfo/MovieInfo.module.css
+++ b/src/pages/MovieInfo/MovieInfo.module.css
@@ -45,7 +45,7 @@
     /* background-color: #1C1C1C; */
     display: flex;
     position: relative;
-    padding: 0.5rem;
+    padding: 0 0.5rem;
 }
 .posterImage{
     height: 300px;
@@ -95,7 +95,7 @@
 }
 .movieTitle{
     color: white;
-    font-size: 3rem !important;
+    font-size: 1.5rem !important;
     font-weight: 600 !important;
 }
 .movieDescription{
